--- a/student-management/Dockerfile
+++ b/student-management/Dockerfile
@@ -1,5 +1,4 @@
-
-FROM openjdk:17-alpine
+FROM eclipse-temurin:17-jdk
 WORKDIR /app
 COPY target/*.jar app.jar
 ENTRYPOINT ["java", "-jar", "app.jar"]
